# QSerializer

./: CMakeLists.txt  README.md
example/: QSerializeExample.pro  classes.h  general.json  general.xml  main.cpp
src/: qserializer.h
